[package]
name = "ingest-rs"
version = "0.1.0"
authors = ["Gary Moore <littlebunch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="2",features = ["yaml"]}
chrono ={version= "0.4.13", features=["serde"]}
csv = "1.1"
diesel = { version = "1.4.5", features = ["mysql","chrono"] }
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.13"
serde_derive = "1.0"