[package]
name = "graphql"
version = "0.1.0"
authors = ["Gary Moore <littlebunch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    actix-web = "3.3.2"
    clap = {version="2",features = ["yaml"]}
     dotenv = "0.15.0"
    env_logger = "0.7.1"
    juniper = "0.14.2"
    regex = "1.4.2"
    serde = "1.0"
    serde_derive = "1.0"
    serde_json = "1.0"
    mariadb = {path="../mariadb"}
    pg = {path="../pg"}
[features]
postgres = []
maria = []
